# test_domini_games

./: settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/fortune/mouse/chesee/test_domini_games/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp  main.h
app/src/main/java/com/fortune/mouse/chesee/test_domini_games/: MainActivity.kt  MyGlRenderer.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fortune/mouse/chesee/test_domini_games/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
